--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -173,6 +173,13 @@
     "qgcRebootRequired":    true
 },
 {
+    "name":             "tiandituToken",
+    "shortDesc": "Access token to Tianditu maps",
+    "longDesc":  "Your personal access token for Tianditu maps",
+    "type":             "string",
+    "default":     ""
+},
+{
     "name":             "mapboxToken",
     "shortDesc": "Access token to Mapbox maps",
     "longDesc":  "Your personal access token for Mapbox maps",
